--- a/CoJezdzi/Podfile
+++ b/CoJezdzi/Podfile
@@ -1,4 +1,4 @@
-platform :ios, '10.0'
+platform :ios, '11.1'
 
 use_frameworks!
 
@@ -7,11 +7,11 @@ use_frameworks!
 target 'CoJezdzi' do
 
     pod 'HTTPStatusCodes'
-    pod 'SnapKit', :git => 'https://github.com/SnapKit/SnapKit.git', :branch => 'swift-4'
+    pod 'SnapKit'
     pod 'Unbox'
     pod 'ActionSheetPicker-3.0'
     pod 'Colours'
-    pod 'PromiseKit', :git => 'https://github.com/mxcl/PromiseKit.git', :branch => 'swift4-beta1'
+    pod 'PromiseKit'
 
 end
 
