--- a/CoJezdzi/Podfile
+++ b/CoJezdzi/Podfile
@@ -1,4 +1,4 @@
-platform :ios, '11.1'
+platform :ios, '11.3'
 
 use_frameworks!
 
@@ -6,12 +6,13 @@ use_frameworks!
 
 target 'CoJezdzi' do
 
-    pod 'HTTPStatusCodes'
-    pod 'SnapKit'
-    pod 'Unbox'
     pod 'ActionSheetPicker-3.0'
     pod 'Colours'
+    pod 'HTTPStatusCodes'
     pod 'PromiseKit'
+    pod 'ReSwift'
+    pod 'SnapKit'
+    pod 'Unbox'
 
 end
 
