WiP: restoring old navigation logic.

--- a/CoJezdzi/CoJezdzi/Info.plist
+++ b/CoJezdzi/CoJezdzi/Info.plist
@@ -35,6 +35,8 @@
 	<string>🌍 Dzięki temu będę mógł pokazać na mapie Twoje położenie :)</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
+	<key>UIMainStoryboardFile</key>
+	<string>Main</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
