--- a/CoJezdzi/CoJezdzi.xcodeproj/xcshareddata/xcschemes/CoJezdzi.xcscheme
+++ b/CoJezdzi/CoJezdzi.xcodeproj/xcshareddata/xcschemes/CoJezdzi.xcscheme
@@ -39,7 +39,7 @@
             </BuildableReference>
          </TestableReference>
          <TestableReference
-            skipped = "NO">
+            skipped = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "BA5685601C763EA600D3B5FE"
