--- a/CoJezdzi/Podfile
+++ b/CoJezdzi/Podfile
@@ -14,6 +14,12 @@ target 'CoJezdzi' do
 
 end
 
+target 'CoJezdziTests' do
+
+    pod 'Overture'
+    
+end
+
 # dsymys for all installed pods
 post_install do |installer|
     installer.pods_project.targets.each do |target|
