Moves application to its own framework.
This should enable "empty test app" and "playground driven development" support.
Also tests should be moved to the correct target.

--- a/CoJezdzi/CoJezdzi.xcodeproj/xcshareddata/xcschemes/CoJezdzi.xcscheme
+++ b/CoJezdzi/CoJezdzi.xcodeproj/xcshareddata/xcschemes/CoJezdzi.xcscheme
@@ -58,6 +58,16 @@
                ReferencedContainer = "container:CoJezdzi.xcodeproj">
             </BuildableReference>
          </TestableReference>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "EF8C77042131989100C5BE5C"
+               BuildableName = "AppFrameworkTests.xctest"
+               BlueprintName = "AppFrameworkTests"
+               ReferencedContainer = "container:CoJezdzi.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
       <MacroExpansion>
          <BuildableReference
