--- a/CoJezdzi/CoJezdzi.xcodeproj/xcshareddata/xcschemes/CoJezdzi.xcscheme
+++ b/CoJezdzi/CoJezdzi.xcodeproj/xcshareddata/xcschemes/CoJezdzi.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0940"
+   LastUpgradeVersion = "1000"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -29,7 +29,7 @@
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
          <TestableReference
-            skipped = "NO">
+            skipped = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "BA5685551C763EA600D3B5FE"
@@ -45,16 +45,6 @@
                BlueprintIdentifier = "BA5685601C763EA600D3B5FE"
                BuildableName = "CoJezdziUITests.xctest"
                BlueprintName = "CoJezdziUITests"
-               ReferencedContainer = "container:CoJezdzi.xcodeproj">
-            </BuildableReference>
-         </TestableReference>
-         <TestableReference
-            skipped = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "EF06CC231FB3C0D40041F1DD"
-               BuildableName = "CoJezdziFrameworkTests.xctest"
-               BlueprintName = "CoJezdziFrameworkTests"
                ReferencedContainer = "container:CoJezdzi.xcodeproj">
             </BuildableReference>
          </TestableReference>
