--- a/CoJezdzi/CoJezdzi.xcodeproj/xcshareddata/xcschemes/AppFramework.xcscheme
+++ b/CoJezdzi/CoJezdzi.xcodeproj/xcshareddata/xcschemes/AppFramework.xcscheme
@@ -14,9 +14,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "BA5685411C763EA600D3B5FE"
-               BuildableName = "CoJezdzi.app"
-               BlueprintName = "CoJezdzi"
+               BlueprintIdentifier = "EF8C76FC2131989100C5BE5C"
+               BuildableName = "AppFramework.framework"
+               BlueprintName = "AppFramework"
                ReferencedContainer = "container:CoJezdzi.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -32,26 +32,6 @@
             skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "BA5685551C763EA600D3B5FE"
-               BuildableName = "CoJezdziTests.xctest"
-               BlueprintName = "CoJezdziTests"
-               ReferencedContainer = "container:CoJezdzi.xcodeproj">
-            </BuildableReference>
-         </TestableReference>
-         <TestableReference
-            skipped = "YES">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "BA5685601C763EA600D3B5FE"
-               BuildableName = "CoJezdziUITests.xctest"
-               BlueprintName = "CoJezdziUITests"
-               ReferencedContainer = "container:CoJezdzi.xcodeproj">
-            </BuildableReference>
-         </TestableReference>
-         <TestableReference
-            skipped = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
                BlueprintIdentifier = "EF8C77042131989100C5BE5C"
                BuildableName = "AppFrameworkTests.xctest"
                BlueprintName = "AppFrameworkTests"
@@ -62,9 +42,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "BA5685411C763EA600D3B5FE"
-            BuildableName = "CoJezdzi.app"
-            BlueprintName = "CoJezdzi"
+            BlueprintIdentifier = "EF8C76FC2131989100C5BE5C"
+            BuildableName = "AppFramework.framework"
+            BlueprintName = "AppFramework"
             ReferencedContainer = "container:CoJezdzi.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -81,16 +61,15 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
+      <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "BA5685411C763EA600D3B5FE"
-            BuildableName = "CoJezdzi.app"
-            BlueprintName = "CoJezdzi"
+            BlueprintIdentifier = "EF8C76FC2131989100C5BE5C"
+            BuildableName = "AppFramework.framework"
+            BlueprintName = "AppFramework"
             ReferencedContainer = "container:CoJezdzi.xcodeproj">
          </BuildableReference>
-      </BuildableProductRunnable>
+      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
@@ -100,16 +79,15 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
+      <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "BA5685411C763EA600D3B5FE"
-            BuildableName = "CoJezdzi.app"
-            BlueprintName = "CoJezdzi"
+            BlueprintIdentifier = "EF8C76FC2131989100C5BE5C"
+            BuildableName = "AppFramework.framework"
+            BlueprintName = "AppFramework"
             ReferencedContainer = "container:CoJezdzi.xcodeproj">
          </BuildableReference>
-      </BuildableProductRunnable>
+      </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
