--- a/CoJezdzi/Podfile
+++ b/CoJezdzi/Podfile
@@ -2,8 +2,6 @@ platform :ios, '12.0'
 
 use_frameworks!
 
-#swift_version = '3.0'
-
 target 'EmptyTestApp' do
 end
 
@@ -12,7 +10,10 @@ target 'CoJezdzi' do
 end
 
 target 'CoJezdziUITests' do
+    inherit! :search_paths
+
     pod 'SBTUITestTunnel/Client'
+    pod 'Overture'
 end
 
 target 'AppFramework' do
