--- a/CoJezdzi/CoJezdzi.xcodeproj/xcshareddata/xcschemes/CoJezdziUITests.xcscheme
+++ b/CoJezdzi/CoJezdzi.xcodeproj/xcshareddata/xcschemes/CoJezdziUITests.xcscheme
@@ -5,6 +5,22 @@
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
+      <BuildActionEntries>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "NO"
+            buildForArchiving = "NO"
+            buildForAnalyzing = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "BA5685601C763EA600D3B5FE"
+               BuildableName = "CoJezdziUITests.xctest"
+               BlueprintName = "CoJezdziUITests"
+               ReferencedContainer = "container:CoJezdzi.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+      </BuildActionEntries>
    </BuildAction>
    <TestAction
       buildConfiguration = "Debug"
@@ -36,6 +52,15 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "BA5685601C763EA600D3B5FE"
+            BuildableName = "CoJezdziUITests.xctest"
+            BlueprintName = "CoJezdziUITests"
+            ReferencedContainer = "container:CoJezdzi.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
@@ -45,6 +70,15 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "BA5685601C763EA600D3B5FE"
+            BuildableName = "CoJezdziUITests.xctest"
+            BlueprintName = "CoJezdziUITests"
+            ReferencedContainer = "container:CoJezdzi.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
